...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_dateTime">

        <TextView
            android:id="@+id/textView_bottom_sheet_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_map_pin_24dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_category" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_detail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPaletteGray"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/bottom_sheet_category"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bottom_sheet_dateTime"
        app:layout_constraintTop_toBottomOf="@+id/imageView_bottom_sheet_stroke">

        <ImageView
            android:id="@+id/bottom_sheet_imageview_detail"
...
